# Pytorch-MSCRED

./: .gitignore  README.md  demo_rollout.py  main.py  pyproject.toml
model/: optimized_mscred.py
utils/: evaluate.py
